# valve-agent

./: .gitignore  README.md  pyproject.toml
examples/: inquiry.csv  sample_tender.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ArtifactCanvas.tsx  Layout.tsx  ToolCard.tsx  toolMeta.ts
frontend/src/pages/: BidDoc.ts  BidEditor.tsx  BidPage.tsx  BidPageV3.tsx  BidV3Types.ts  ChatPage.tsx  ProjectsPage.tsx  QuotePage.tsx  RagPage.tsx  TenderPage.tsx
frontend/src/styles/: index.css
src/valve_agent/: cli.py
src/valve_agent/agent/: __init__.py  events.py  loop.py  tools.py
src/valve_agent/agents/: __init__.py  bid_agent.py  quote_agent.py
src/valve_agent/api/: __init__.py  app.py  chat_service.py  deps.py  main.py  routes.py  schemas.py  services.py
src/valve_agent/documents/: __init__.py  export.py  loader.py  tender_parser.py
src/valve_agent/engines/: __init__.py  compliance.py  quote.py  selection.py  waste_bid.py
src/valve_agent/integrations/: __init__.py  base.py  file_adapter.py
src/valve_agent/knowledge/: __init__.py  repository.py  seed.py
src/valve_agent/llm/: __init__.py  base.py  deepseek.py  factory.py  mock.py  offline.py  parser.py  qwen.py
src/valve_agent/models/: __init__.py  enums.py  pricing.py  product.py  request.py  tender.py
tests/: conftest.py  test_agent_runtime.py  test_agents.py  test_api.py  test_chat_api.py  test_cli.py  test_compliance.py  test_documents.py  test_knowledge.py  test_quote.py  test_selection.py
(+8 files in other folders)
