[project]
name = "valve-agent"
version = "0.1.0"
description = "阀门企业智能标书与报价 Agent — 选型/报价/标书三大确定性引擎 + LLM 可插拔编排"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
valve-agent = "valve_agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valve_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
