[project]
name = "valve-agent"
version = "0.1.0"
description = "阀门企业智能标书与报价 Agent — 选型/报价/标书三大确定性引擎 + LLM 可插拔编排"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[project.scripts]
valve-agent = "valve_agent.cli:app"
valve-api = "valve_agent.api.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valve_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
